<resources>
    <string name="app_name">Kvíz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="play">PLAY</string>
    <string name="answer_d">Answer D</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_a">Answer A</string>
    <string name="which_one_is_better_you_or_me">Which one is better you or me??</string>
    <string name="_0">0</string>
    <string name="_1_30">1/30</string>
    <string name="passed_0_30">Passed : 0/30</string>
    <string name="try_again">Try Again</string>
    <string name="name">Name</string>
    <string name="category_name">Category Name</string>
    <string name="score">Score</string>
</resources>
